2011-03-10  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Dan Bernstein.

        Backspace deletes all non-BMP symbols at once, and then some
        https://bugs.webkit.org/show_bug.cgi?id=55971
        <rdar://problem/8725312>

        * platform/mac/editing/input/insert-delete-smp-symbol-expected.txt: Added.
        * platform/mac/editing/input/insert-delete-smp-symbol.html: Added.
2011-03-10  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        Backspace deletes all non-BMP symbols at once, and then some
        https://bugs.webkit.org/show_bug.cgi?id=55971
        <rdar://problem/8725312>

        Test: platform/mac/editing/input/insert-delete-smp-symbol.html

        * rendering/RenderText.cpp:
        (WebCore::isMark): This matches what Core Foundation does for all characters that I tested.
        (WebCore::RenderText::previousOffsetForBackwardDeletion): Changed to use isMark().

git-svn-id: svn://svn.chromium.org/blink/trunk@80791 bbb929c8-8fbe-4397-9dbb-9b2b20218538